Improved syntax for hotdogs

--- a/Literate.org
+++ b/Literate.org
@@ -71,8 +71,8 @@ The name comes from the fact, you don't really know what is inside of a hotdog. 
 syntax = "proto3";
 package soulbound_modules.v1;
 
-message Value {
-  oneof value {
+message ValueStruct {
+  oneof value_enum {
     int32 int64_value = 1;
     uint64 uint64_value = 2;
     string string_value = 3;
@@ -81,7 +81,7 @@ message Value {
 }
 
 message Map {
-  map<string, Value> keys = 1;
+  map<string, ValueStruct> kv = 1;
 }
 
 message Hotdog {
@@ -320,7 +320,7 @@ use std::{collections::HashMap, ops::Mul, str::from_utf8};
 use substreams_entity_change::tables::Tables;
 use substreams_ethereum::pb::eth::v2::TransactionTrace;
 
-use crate::pb::soulbound_modules::v1::{value::Value as ValueEnum, Value as ValueStruct};
+use crate::pb::soulbound_modules::v1::{value_struct::ValueEnum, ValueStruct};
 use crate::pb::soulbound_modules::v1::{Hotdog, Hotdogs, Map};
 use sha3::{self, Digest};
 use substreams::log::println;
@@ -348,8 +348,8 @@ impl From<Hotdog> for HashMap<String, ValueEnum> {
     fn from(hotdog: Hotdog) -> Self {
         let mut map: HashMap<String, ValueEnum> = HashMap::new();
 
-        for (key, value) in hotdog.map.as_ref().unwrap().keys.iter() {
-            map.insert(key.to_string(), value.value.clone().unwrap());
+        for (key, value_struct) in hotdog.map.as_ref().unwrap().kv.iter() {
+            map.insert(key.to_string(), value_struct.value_enum.clone().unwrap());
         }
 
         map.insert(
@@ -383,14 +383,14 @@ impl From<HashMap<String, ValueEnum>> for Hotdog {
             new_map.insert(
                 key.clone(),
                 ValueStruct {
-                    value: Some(value.clone()),
+                    value_enum: Some(value.clone()),
                 },
             );
         }
 
         Hotdog {
             hotdog_name,
-            map: Some(Map { keys: new_map }),
+            map: Some(Map { kv: new_map }),
         }
     }
 }
@@ -458,7 +458,7 @@ Conversion from a ValueStruct into a ValueEnum. Again naming doesn't feel great 
 #+begin_src rust
 impl Into<ValueEnum> for ValueStruct {
     fn into(self) -> ValueEnum {
-        match self.value {
+        match self.value_enum {
             Some(value) => value,
             None => panic!("value must be present"),
         }
@@ -473,7 +473,7 @@ Another type conversion that helps with the syntax soup.
 #+begin_src rust
 impl Into<HashMap<String, ValueEnum>> for Map {
     fn into(self) -> HashMap<String, ValueEnum> {
-        self.keys
+        self.kv
             .into_iter()
             .map(|(key, value)| (key, value.into()))
             .collect()
@@ -665,11 +665,11 @@ pub fn param_value_to_value_enum(value: &Value) -> ValueEnum {
                 map.insert(
                     i.to_string(),
                     ValueStruct {
-                        value: Some(param_value_to_value_enum(&value)),
+                        value_enum: Some(param_value_to_value_enum(&value)),
                     },
                 );
             }
-            ValueEnum::MapValue(Map { keys: map })
+            ValueEnum::MapValue(Map { kv: map })
         }
         Value::String(string) => ValueEnum::StringValue(string.to_string()),
         Value::Bytes(bytes) => ValueEnum::StringValue(format_hex(&bytes)),
@@ -680,11 +680,11 @@ pub fn param_value_to_value_enum(value: &Value) -> ValueEnum {
                 map.insert(
                     i.to_string(),
                     ValueStruct {
-                        value: Some(param_value_to_value_enum(&value)),
+                        value_enum: Some(param_value_to_value_enum(&value)),
                     },
                 );
             }
-            ValueEnum::MapValue(Map { keys: map })
+            ValueEnum::MapValue(Map { kv: map })
         }
         Value::Tuple(tuple_arr) => {
             let mut map = HashMap::new();
@@ -692,11 +692,11 @@ pub fn param_value_to_value_enum(value: &Value) -> ValueEnum {
                 map.insert(
                     name.to_string(),
                     ValueStruct {
-                        value: Some(param_value_to_value_enum(&value)),
+                        value_enum: Some(param_value_to_value_enum(&value)),
                     },
                 );
             }
-            ValueEnum::MapValue(Map { keys: map })
+            ValueEnum::MapValue(Map { kv: map })
         }
     }
 }
@@ -716,12 +716,12 @@ pub fn format_hex(hex: &[u8]) -> String {
 ** Imports
 #+NAME: nft_helpers.rs/Imports
 #+begin_src rust
-use crate::{ValueEnum, helpers::clone_prefix};
+use crate::{helpers::clone_prefix, ValueEnum};
 use std::collections::HashMap;
-use substreams::scalar::{BigInt, BigDecimal};
 use std::str::FromStr;
+use substreams::scalar::{BigDecimal, BigInt};
 
-use crate::{pb::soulbound_modules::v1::Hotdog, helpers::HotdogHelpers};
+use crate::{helpers::HotdogHelpers, pb::soulbound_modules::v1::Hotdog};
 #+end_src
 ** NFT Price "type"
 :PROPERTIES:
@@ -769,7 +769,6 @@ Converts a blur "OrdersMatched" event into an [[#nft_price]] hotdog.
 
 #+NAME: nft_helpers.rs/Type Conversions/blur_trade_to_nft_price
 #+begin_src rust
-
 fn blur_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
     let name = &hotdog.hotdog_name;
     if name != "OrdersMatched" {
@@ -790,17 +789,17 @@ fn blur_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
 
     match (buy, sell) {
         (ValueEnum::MapValue(buy_map), ValueEnum::MapValue(sell_map)) => {
-            let collection = buy_map.keys.get("collection").unwrap().clone();
-            let price = buy_map.keys.get("price").unwrap().clone();
-            let price_string: String = match price.value.clone().unwrap() {
+            let collection = buy_map.kv.get("collection").unwrap().clone();
+            let price = buy_map.kv.get("price").unwrap().clone();
+            let price_string: String = match price.value_enum.clone().unwrap() {
                 ValueEnum::StringValue(price_string) => price_string,
                 _ => return Err("price is not a string"),
             };
 
             let price_in_eth = wei_to_eth(&price_string);
             let price_in_eth = ValueEnum::StringValue(price_in_eth);
-            let payment_token = buy_map.keys.get("paymentToken").unwrap().clone();
-            let token_id = sell_map.keys.get("tokenId").unwrap().clone();
+            let payment_token = buy_map.kv.get("paymentToken").unwrap().clone();
+            let token_id = sell_map.kv.get("tokenId").unwrap().clone();
             let name = ValueEnum::StringValue("NFTPrice".to_string());
 
             let mut output_map: HashMap<String, ValueEnum> = HashMap::new();
@@ -835,16 +834,19 @@ fn seaport_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
 
     let consideration = match map.get("consideration") {
         Some(consideration) => consideration.clone(),
-        None => panic!("map does not contain a consideration field {:?}", hotdog)
+        None => panic!("map does not contain a consideration field {:?}", hotdog),
     };
 
     let offer = match map.get("offer") {
         Some(offer) => offer.clone(),
-        None => panic!("map does not contain a offer field {:?}", map)
+        None => panic!("map does not contain a offer field {:?}", map),
     };
 
     let mut output_map: HashMap<String, ValueEnum> = HashMap::new();
-    output_map.insert("hotdog_name".to_string(), ValueEnum::StringValue("NFTPrice".to_string()));
+    output_map.insert(
+        "hotdog_name".to_string(),
+        ValueEnum::StringValue("NFTPrice".to_string()),
+    );
     clone_prefix(&map, &mut output_map, &"tx_".to_string());
 
     // the whole thang goes like this:
@@ -864,51 +866,59 @@ fn seaport_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
             // }
             let mut nft_value: BigInt = BigInt::zero();
 
-            for (index, offer) in offer.keys.iter() {
-                let value:ValueEnum = offer.clone().into();
+            for (index, offer) in offer.kv.iter() {
+                let value: ValueEnum = offer.clone().into();
 
                 let offer = match value {
-                    ValueEnum::MapValue(map) => {
-                        map
-                    },
-                    _ => panic!("offer is not a map!")
+                    ValueEnum::MapValue(map) => map,
+                    _ => panic!("offer is not a map!"),
                 };
 
-                let offer = offer.keys;
+                let offer = offer.kv;
 
                 let item_type = offer.get("itemType").unwrap().clone();
 
                 let item_type = match item_type.into() {
                     ValueEnum::StringValue(item_type) => item_type,
-                    _ => panic!("item type is not a string!")
+                    _ => panic!("item type is not a string!"),
                 };
 
                 // if the item type isn't 2, it isn't an nft and we don't care about it
                 if item_type != "2" {
-                    return Ok(Hotdog::default())
+                    return Ok(Hotdog::default());
                 }
 
-                let collection:ValueEnum = offer.get("token").unwrap().clone().into();
-                let token_id:ValueEnum = offer.get("identifier").unwrap().clone().into();
+                let collection: ValueEnum = offer.get("token").unwrap().clone().into();
+                let token_id: ValueEnum = offer.get("identifier").unwrap().clone().into();
 
-                if let Some(existing_collection) = output_map.insert("collection".to_string(), collection.clone()) {
+                if let Some(existing_collection) =
+                    output_map.insert("collection".to_string(), collection.clone())
+                {
                     match (existing_collection, collection) {
-                        (ValueEnum::StringValue(existing_collection), ValueEnum::StringValue(collection)) => {
+                        (
+                            ValueEnum::StringValue(existing_collection),
+                            ValueEnum::StringValue(collection),
+                        ) => {
                             if existing_collection != collection {
                                 return Err("multiple collections in one hotdog");
                             }
-                        },
-                        _ => panic!("collection is not a string!")
+                        }
+                        _ => panic!("collection is not a string!"),
                     }
                 };
-                if let Some(existing_token_id) = output_map.insert("token_id".to_string(), token_id.clone()) {
+                if let Some(existing_token_id) =
+                    output_map.insert("token_id".to_string(), token_id.clone())
+                {
                     match (existing_token_id, token_id) {
-                        (ValueEnum::StringValue(existing_token_id), ValueEnum::StringValue(token_id)) => {
+                        (
+                            ValueEnum::StringValue(existing_token_id),
+                            ValueEnum::StringValue(token_id),
+                        ) => {
                             if existing_token_id != token_id {
                                 return Err("multiple token_ids in one hotdog");
                             }
-                        },
-                        _ => panic!("token_id is not a string!")
+                        }
+                        _ => panic!("token_id is not a string!"),
                     }
                 };
             }
@@ -931,56 +941,58 @@ fn seaport_trade_to_nft_price(hotdog: &Hotdog) -> Result<Hotdog, &str> {
             // ERC1155_WITH_CRITERIA
             // }
 
-            for (index, consideration) in consideration.keys.iter() {
+            for (index, consideration) in consideration.kv.iter() {
                 let consideration: ValueEnum = consideration.clone().into();
 
                 let consideration = match consideration {
-                    ValueEnum::MapValue(map) => {
-                        map
-                    },
-                    _ => panic!("offer is not a map!")
+                    ValueEnum::MapValue(map) => map,
+                    _ => panic!("offer is not a map!"),
                 };
 
-                let consideration = consideration.keys;
+                let consideration = consideration.kv;
 
                 let item_type = consideration.get("itemType").unwrap().clone();
                 let item_type = match item_type.into() {
                     ValueEnum::StringValue(item_type) => item_type,
-                    _ => panic!("item type is not a string!")
+                    _ => panic!("item type is not a string!"),
                 };
 
                 // if the item type is 2, it is an NFT and we don't want to track it
                 if item_type == "2" {
-                    return Ok(Hotdog::default())
+                    return Ok(Hotdog::default());
                 }
 
-                let token:ValueEnum = consideration.get("token").unwrap().clone().into();
+                let token: ValueEnum = consideration.get("token").unwrap().clone().into();
                 let amount = consideration.get("amount").unwrap().clone();
-                let amount_string: String = match amount.value.clone().unwrap() {
+                let amount_string: String = match amount.value_enum.clone().unwrap() {
                     ValueEnum::StringValue(amount_string) => amount_string,
-                    _ => return Err("amount is not a string")
+                    _ => return Err("amount is not a string"),
                 };
 
                 let amount = BigInt::from_str(&amount_string).unwrap();
                 nft_value = nft_value + amount;
 
-                if let Some(existing_token) = output_map.insert("payment_token".to_string(), token.clone()) {
+                if let Some(existing_token) =
+                    output_map.insert("payment_token".to_string(), token.clone())
+                {
                     match (existing_token, token) {
                         (ValueEnum::StringValue(existing_token), ValueEnum::StringValue(token)) => {
                             if existing_token != token {
                                 return Err("multiple payment_tokens in one hotdog");
                             }
-                        },
-                        _ => panic!("token is not a string!")
+                        }
+                        _ => panic!("token is not a string!"),
                     }
                 };
             }
-            output_map.insert("price".to_string(), ValueEnum::StringValue(nft_value.to_string()));
-
+            output_map.insert(
+                "price".to_string(),
+                ValueEnum::StringValue(nft_value.to_string()),
+            );
 
             Ok(Hotdog::from(output_map))
         }
-        _ => Ok(Hotdog::default())
+        _ => Ok(Hotdog::default()),
     }
 }
 #+end_src
@@ -1006,7 +1018,7 @@ mod pb;
 use ethereum_abi::Abi;
 use helpers::{add_tx_meta, format_hex, log_to_hotdog, HotdogHelpers, UpdateTables};
 use nft_helpers::NftPrice;
-use pb::soulbound_modules::v1::{value::Value as ValueEnum, Hotdog, Hotdogs, Value as ValueStruct};
+use pb::soulbound_modules::v1::{value_struct::ValueEnum, Hotdog, Hotdogs, ValueStruct};
 use std::collections::HashMap;
 use substreams::{
     self,
@@ -1252,8 +1264,8 @@ fn filter_blur_trades(param: String, hotdogs: Hotdogs) -> Result<Hotdogs, Substr
 
         match (buy, sell) {
             (ValueEnum::MapValue(buy_map), ValueEnum::MapValue(sell_map)) => {
-                let buy_collection = buy_map.keys.get("collection").unwrap().clone();
-                let sell_collection = sell_map.keys.get("collection").unwrap().clone();
+                let buy_collection = buy_map.kv.get("collection").unwrap().clone();
+                let sell_collection = sell_map.kv.get("collection").unwrap().clone();
                 match (buy_collection.into(), sell_collection.into()) {
                     (
                         ValueEnum::StringValue(buy_collection),
@@ -1421,7 +1433,7 @@ fn filter_seaport_trades(param: String, hotdogs: Hotdogs) -> Result<Hotdogs, Sub
         match (consideration, offer) {
             (ValueEnum::MapValue(consideration), ValueEnum::MapValue(offer)) => {
                 // the event field "offer" is an array of offers, this is what is being purchased
-                for (index, value) in offer.keys.iter() {
+                for (index, value) in offer.kv.iter() {
                     let value: HashMap<String, ValueEnum> = match value.clone().into() {
                         ValueEnum::MapValue(value) => value.into(),
                         _ => continue,
@@ -1437,7 +1449,7 @@ fn filter_seaport_trades(param: String, hotdogs: Hotdogs) -> Result<Hotdogs, Sub
                     }
                 }
                 // the event field "consideration" is an array of considerations, this is what is being sold to purchase the offer
-                for (index, value) in consideration.keys.iter() {
+                for (index, value) in consideration.kv.iter() {
                     let value: HashMap<String, ValueEnum> = match value.clone().into() {
                         ValueEnum::MapValue(value) => value.into(),
                         _ => continue,
